--- a/firebase.json
+++ b/firebase.json
@@ -27,5 +27,23 @@
                 "destination": "/index.html"
             }
         ]
+    },
+    "emulators": {
+        "auth": {
+            "port": 9099
+        },
+        "functions": {
+            "port": 5001
+        },
+        "firestore": {
+            "port": 8085
+        },
+        "storage": {
+            "port": 9199
+        },
+        "ui": {
+            "enabled": true
+        },
+        "singleProjectMode": true
     }
 }
