--- a/functions/package.json
+++ b/functions/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^17.2.3",
     "firebase-admin": "^11.8.0",
     "firebase-functions": "^4.3.1",
+    "node-fetch": "^2.7.0",
     "openai": "^6.10.0"
   },
   "devDependencies": {
